# weather-checker

./: .gitignore  Makefile  README.md  cdk.json  package-lock.json  package.json
lambda/: Makefile  env_sample.sh  pyproject.toml
lambda/layer/app/: requirements.txt
lambda/layer/chrome/: createLayer.sh
lambda/src/weather_checker/: index.py
lambda/tests/whather_checker/: test_index.py
lib/: test.ts  weather-checker-stack-lambda.ts
test/: cdk-workshop-simple-lambda.test.ts  weather-checker-stack-lambda.test.ts
